deployment-with-config-map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: hlwd
  name: hlwd
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 30
  selector:
    matchLabels:
      app: hlwd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hlwd
    spec:
      containers:
      - image: ssadhukhanv2/hello-world:0.0.5-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: hello-world
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hlwd
  name: hlwd
  namespace: default
spec:
  ports:
    - nodePort: 30622
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: hlwd
  sessionAffinity: None
  type: LoadBalancer
